--- a/themes/yodeley/directives/home-content.html
+++ b/themes/yodeley/directives/home-content.html
@@ -1,40 +1,17 @@
 
-<div id="cats" class="container-fluid">
+<div id="cats" class="container-fluid" ng-controller="CatGrid">
 	<div class="row">
-		<div class="col-sm-4">
-			<div class="bg-img absolute-center" style="background-image: url(http://lorempixel.com/601/601)"></div>
-			<div class="meta absolute-center">
-				<h2>Animação</h2>
-				<p>A Yodeley produziu e participou de animações variadas.</p>
-			</div>
-		</div>
-		<div class="col-sm-4">
-			<div class="bg-img absolute-center" style="background-image: url(http://lorempixel.com/600/600)"></div>
-			<div class="meta absolute-center">
-				<h2>Arte</h2>
-				<p>Com um forte departamento de arte e cenografia, a Yodeley tem se destacado em diversos trabalhos na área.</p>
-			</div>
-		</div>
-		<div class="col-sm-4">
-			<div class="bg-img absolute-center" style="background-image: url(http://lorempixel.com/602/602)"></div>
-			<div class="meta absolute-center">
-				<h2>Cinema</h2>
-				<p>Com filmes no circuito comercial, curtas metragens e séries, o núcleo de produção cinematográfica da Yodeley produziu e criou conteúdos com reconhecimento internacional.</p>
-			</div>
-		</div>
-		<div class="col-sm-6">
-			<div class="bg-img absolute-center" style="background-image: url(http://lorempixel.com/603/603)"></div>
-			<div class="meta absolute-center">
-				<h2>Som</h2>
-				<p>Trilha sonora, edição de som e mixagem também estão no repertório da Yodeley, abrangendo de maneira técnica e criativa todo o escopo do som, desde sua captação até sua finalização.</p>
-			</div>
-		</div>
-		<div class="col-sm-6">
-			<div class="bg-img absolute-center" style="background-image: url(http://lorempixel.com/604/604)"></div>
-			<div class="meta absolute-center">
-				<h2>Vídeo</h2>
-				<p>Webséries, clipes, institucionais. A sessão de vídeo da Yodeley é a mais variada, e atende todo tipo de demanda e diferentes projetos internos.</p>
-			</div>
+
+		<div ng-class="catGrid($index)" ng-repeat="cat in categories track by $index">
+			<a ng-href="/#/{{ cat.slug }}">
+				<div class="bg-img absolute-center" style="background-image: url({{ imgs[$index][0].featured_image_medium }})"></div>
+				
+				<div class="meta absolute-center">
+						<h2 ng-bind-html="cat.name"></h2>
+					<p>{{ imgs[$index].catId }}</p>
+					<p ng-bind-html="cat.description"></p>
+				</div>
+			</a>
 		</div>
 	</div>
 </div>
