--- a/themes/yodeley/directives/home-content.html
+++ b/themes/yodeley/directives/home-content.html
@@ -5,10 +5,10 @@
 		<div ng-class="catGrid($index)" ng-repeat="cat in categories track by $index">
 			<a ng-href="/#/{{ cat.slug }}">
 				<div class="bg-img absolute-center" style="background-image: url({{ imgs[$index][0].featured_image_medium }})"></div>
-				
+
 				<div class="meta absolute-center">
 						<h2 ng-bind-html="cat.name"></h2>
-					<p>{{ imgs[$index].catId }}</p>
+					<p>LA LA LAND</p>
 					<p ng-bind-html="cat.description"></p>
 				</div>
 			</a>
