home displays last 3 posts

--- a/themes/yodeley/directives/header.html
+++ b/themes/yodeley/directives/header.html
@@ -7,6 +7,7 @@
           <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
           <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
           <li><i class="fa fa-youtube" aria-hidden="true"></i></li>
+          <li><i class="fa fa-google-plus" aria-hidden="true"></i></li>
         </ul>
         <div id="entreemcontato">
           <p>entre em contato</p>
