--- a/themes/yodeley/directives/item-home.html
+++ b/themes/yodeley/directives/item-home.html
@@ -1,14 +1,19 @@
+<div class="container-fluid">
+	<div class="row">
+		<div class="{{$index | itemClass}} item-home col-sm-4" ng-repeat="post in posts track by $index">
+			<a ng-href="#/{{ theRoute[0].slug }}/{{ post.slug }}" class="inline" ng-click="openModaal()" >
 
-<div class="{{$index | itemClass}} item" ng-repeat="post in posts track by $index" style="background-image: url('{{ post.featured_image_medium}}'); height: 250px">
-	<a ng-href="#/{{ theRoute[0].slug }}/{{ post.slug }}" class="inline" ng-click="openModaal()" >
 
+					<div class="meta absolute-center">
+			 				<h6 ng-bind-html="catArray[$index].name">{{ post.date_gmt | date : 'd/M/yy, h:m'}}</h6>
+							<h3 ng-bind-html="post.title.rendered"></h3>
+			<!-- 			<p ng-if="post.format == 'standard'" ng-bind-html="post.excerpt.rendered"></p> -->
+							
+					</div>		
+					<div class="bg" style="background-image: url('{{ post.featured_image_medium}}')"></div>	
 
-			<div class="meta absolute-center">
-	 				<h6 ng-bind-html="catArray[$index].name">{{ post.date_gmt | date : 'd/M/yy, h:m'}}</h6>
-					<h3 ng-bind-html="post.title.rendered"></h3>
-	<!-- 			<p ng-if="post.format == 'standard'" ng-bind-html="post.excerpt.rendered"></p> -->
-					
-			</div>		
-
-	</a>	
-</div>	
+			</a>
+		</div>	
+	</div>
+</div>
+		
