--- a/themes/yodeley/directives/page-produtora.html
+++ b/themes/yodeley/directives/page-produtora.html
@@ -1,8 +1,13 @@
 <div class="container-fluid" ng-controller="Produtora">
 	<div class="row">
-		<div id="produtora" class="col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
-			<h1 ng-bind-html='produtora.title.rendered'></h1>
-			<div ng-bind-html="produtora.content.rendered"></div>
+		<div class="container">
+			<div class="row">
+				<div id="produtora" class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+					<h1 ng-bind-html='produtora.title.rendered'></h1>
+					<div ng-bind-html="produtora.content.rendered"></div>
+				</div>
+			</div>
 		</div>
+				
 	</div>
 </div>
