--- a/themes/yodeley/directives/page-equipe.html
+++ b/themes/yodeley/directives/page-equipe.html
@@ -2,8 +2,10 @@
 	<div class="row">
 		<div class="container">
 			<div class="row text-center">
-				<div class="col-sm-12">
-					<h1>equipe</h1>
+				<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+					<h1 ng-bind-html="equipePage.title.rendered"></h1>
+					<div ng-bind-html="equipePage.content.rendered"></div>
+					<div class="spacer"></div>
 				</div>
 
 				<div class="col-sm-6 col-md-3" ng-repeat="membro in equipe">
