--- a/themes/yodeley/directives/item.html
+++ b/themes/yodeley/directives/item.html
@@ -2,11 +2,11 @@
 <div class="{{$index | itemClass}} item" ng-repeat="post in posts track by $index">
 	<a ng-href="#/{{ theRoute[0].slug }}/{{ post.slug }}" class="inline" ng-click="openModaal()" >
 		<div class="well">
-			<img ng-if="post.format == 'image' || post.format == 'standard'" ng-src="{{ post.featured_image_large}}" data-adaptive-background />
-			<iframe ng-if="post.format == 'audio'" width="100%" height="300" scrolling="no" frameborder="no" ng-src="{{ post.soundcloud | soundcloudEmbedUrl }}"></iframe>
+			<img ng-src="{{ post.featured_image_large}}" data-adaptive-background />
+<!-- 			<iframe ng-if="post.format == 'audio'" width="100%" height="300" scrolling="no" frameborder="no" ng-src="{{ post.soundcloud | soundcloudEmbedUrl }}"></iframe>
 			<div ng-if="post.format == 'video'" class="embed-responsive embed-responsive-16by9">
 				<iframe ng-src="{{ post.youtube | youtubeEmbedUrl }}"  class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
-			</div>
+			</div> -->
 			<div class="meta">
 	<!-- 				<h6>{{ post.date_gmt | date : 'd/M/yy, h:m'}}</h6>
 	-->				<h3 ng-bind-html="post.title.rendered"></h3>
