--- a/themes/yodeley/directives/header.html
+++ b/themes/yodeley/directives/header.html
@@ -1,3 +1,5 @@
+
+
 <div id="upperHeader" class="container">
   <div class="row">
     <div class="col-md-12">
@@ -15,7 +17,9 @@
         </div>
       </div>  
     </div>
+    <yodeley-navbar></yodeley-navbar>
   </div>
     
 </div>
+
 <!-- 	END HEADER -->
