--- a/themes/yodeley/directives/footer.html
+++ b/themes/yodeley/directives/footer.html
@@ -1,11 +1,1 @@
-<div class="container-fluid">
-	<div class="row">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
-					<h1>Yodeley Footer</h1>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+<h1>{{header}}</h1>
