--- a/themes/yodeley/directives/navbar.html
+++ b/themes/yodeley/directives/navbar.html
@@ -1,21 +1,23 @@
-<nav class="navbar navbar-inverse" ng-controller="Nav">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
+<nav id="navWay" class="navbar navbar-inverse" ng-controller="Nav">
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
       <ul class="nav navbar-nav">
         <li ng-repeat="cat in categories"><a ng-href="/#/{{ cat.slug }}" ng-bind-html="cat.name"></a></li>
       </ul>
 
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
 </nav>
+
+<script>
+var waypoints = $('#navWay').waypoint(function(direction) {
+  $('#navWay').toggleClass('stuck')
+  if (direction == "down") {
+  };
+
+  if (direction == "up") {
+    
+  };
+}, {
+  offset: '0%'
+})
+
+</script>
